- Split division routines out into an include file. - Reuse division routines for calculating both division and modulus. - Add implementations of BsfByte and BsrByte that don't use a lookup table.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42494 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -9199,6 +9199,7 @@ rtl/atari/xbios.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/avr/avr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/avr/cpuh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/avr/cpuinnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/avr/divide.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/avr/int64p.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/avr/intrinsics.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/avr/makefile.cpu svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
