* an incomplete case statement is not an error in ISO Pascal (mantis #35910)   * give a compile-time error in ISO/Extended Pascal if the compiler can prove     the case selector value is not handled, and a warning in other modes     (mantis #35915)    o trigger the case node simplification at the end of the case node typecheck      pass, like for other nodes
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42574 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -14247,6 +14247,11 @@ tests/test/tcase9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcasecov1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcasecov2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcasecov3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov3a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov3b.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov3c.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov3d.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov3e.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcasecov4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcasecov5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcasecov6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
