Revert wrong part in commit 42580:  reinstate 'override FPC=' for cycle targets
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42585 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/compiler/Makefile.fpc
+++ b/compiler/Makefile.fpc
@@ -928,7 +928,7 @@ else
 # ppc3/ppcXXX = native (skipped for cross installation)
 #
 
-#cycle: override FPC=
+cycle: override FPC=
 cycle:
 ifdef NEED_G_COMPILERS
 	$(MAKE) fpcmade.generate_g_compilers
