+ make use of the mremap syscall of linux to re-allocate large memory blocks faster
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42713 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -14737,6 +14737,7 @@ tests/test/tgenfunc8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tgenfunc9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tgoto.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/theap.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/theap2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/theapthread.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/thintdir.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/thintdir1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
