* Add mime.types for benefit of windows users, call new LoadKnownTypes
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42821 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -4419,6 +4419,7 @@ packages/fcl-web/examples/session/wmsession.pp svn_mime_002dtype=text%2Fplain sv
 packages/fcl-web/examples/simpleserver/README.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/examples/simpleserver/index.css svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/examples/simpleserver/index.html svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/fcl-web/examples/simpleserver/mime.types svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/examples/simpleserver/simpleserver.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/examples/simpleserver/simpleserver.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/examples/webdata/demo/createusers.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
