+ AArch64: support for vX.8b/vX.16b register names + support for more than 256 registers in the register dat files - removed totherregisterset + AArch64: use vmov to load immediates if possible + AArch64: use eor to clear mm registers + small command line tool for quick creating of vfp register list in a64reg.dat
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42916 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -890,6 +890,7 @@ compiler/utils/fixtab.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpc.mpw svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpimpdef.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/utils/gena64vfp.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/utils/gia64reg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/gppc386.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/mk68kreg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
