* Additional tests for sqlite3dataset by Luis Americo (bug ID 323247)
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42945 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -3420,6 +3420,7 @@ packages/fcl-db/tests/testleaks.sh svn_mime_002dtype=text%2Fplain svn_eol_002dst
 packages/fcl-db/tests/testspecifictbufdataset.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-db/tests/testspecifictdbf.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-db/tests/testspecifictmemdataset.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+packages/fcl-db/tests/testspecifictsqlite3dataset.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-db/tests/testsqldb.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/fcl-db/tests/testsqlfiles.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-db/tests/testsqlfiles.lpr svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
