--- a/.gitattributes
+++ b/.gitattributes
@@ -4523,6 +4523,7 @@ packages/fcl-web/src/base/fpoauth2ini.pp svn_mime_002dtype=text%2Fplain svn_eol_
 packages/fcl-web/src/base/fpweb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/src/base/fpwebclient.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/src/base/fpwebfile.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/fcl-web/src/base/fpwebproxy.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/src/base/httpdefs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/src/base/httpprotocol.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-web/src/base/httproute.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
