* fixed loading the address of a copied labelnode in a loadnode     (mantis #35877)
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42987 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -15652,6 +15652,7 @@ tests/test/units/matrix/tinv1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dsty
 tests/test/units/objects/testobj.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/objects/testobj1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/objects/testobj2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/units/rtl-generics/tw35877.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/sharemem/libtest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/sharemem/test1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/softfpu/sfttst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
