--- a/.gitattributes
+++ b/.gitattributes
@@ -9642,7 +9642,7 @@ packages/uuid/src/macuuid.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 packages/vcl-compat/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/vcl-compat/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/vcl-compat/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-packages/vcl-compat/src/System.NetEncoding.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/vcl-compat/src/system.netencoding.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/vcl-compat/tests/tcnetencoding.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/vcl-compat/tests/testcompat.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/vcl-compat/tests/testcompat.lpr svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
