* renamed tls model switches and symbols to match gcc
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@43122 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -202,7 +202,7 @@ endif
 # the general threading model when compiling the final versions of rtl and packages
 ifneq ($(findstring $(OS_TARGET),linux),)
 ifneq ($(findstring $(CPU_TARGET),i386),)
-override OPTNEW+=-CVgeneral
+override OPTNEW+=-CVgeneral-dynamic
 endif
 endif
 
