* arm uses the same approach as i386: during the final build of the rtl and the packages, the general dynamic tls model is selected
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@43129 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -201,7 +201,7 @@ endif
 # some targets do not generate PIC by default so we have select explicitly 
 # the general threading model when compiling the final versions of rtl and packages
 ifneq ($(findstring $(OS_TARGET),linux),)
-ifneq ($(findstring $(CPU_TARGET),i386),)
+ifneq ($(findstring $(CPU_TARGET),i386 arm),)
 override OPTNEW+=-CVgeneral-dynamic
 endif
 endif
