+ support for arm attributes   * abi notes fixed
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@43157 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -91,6 +91,7 @@ compiler/arm/narmld.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/arm/narmmat.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/narmmem.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/narmset.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/arm/narmutil.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/arm/pp.lpi.template svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/raarm.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/raarmgas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
