--- a/.gitattributes
+++ b/.gitattributes
@@ -14874,6 +14874,8 @@ tests/test/tintfcdecl1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 tests/test/tintfcdecl2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tintfdef.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tintuint.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tismngd1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tismngd2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tisobuf1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tisobuf2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tisoext1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
