* Testsuite in punit format
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@43425 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -11819,6 +11819,57 @@ rtl/symbian/uiq.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/uiqclasses.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/uiqinc/qikapplication.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/symbian/uiqinc/qikapplicationoo.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/docompile.sh svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/punit.cfg svnc_vn_003aeol_002dstyle=native svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/punit.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/testpunit.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/testpunit2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/testpunit3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/testrtl.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/testrtl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/tohelper.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/unittest.cfg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utastrcmp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utbytesof.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utclasses.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utdfexp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utdirex.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utdos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utencoding.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utencodingerr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utenv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utexec.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utexpfncase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utextractquote.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfattr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfexpand.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utffirst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfile.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfile1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfile2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfilename.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfloattostr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utformat.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utfsearch.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utmath.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utrtl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utrwsync.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utscanf.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utstrcmp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utstrcopy.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utstringbuild.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utstringhelp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utstrings1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utstrtobool.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utstrtotime.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utsyshelpers.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utsysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/uttypinfo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utunifile.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utuplow.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utustringbuild.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utverify.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/test/utwstrcmp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/ucmaps/8859-1.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/ucmaps/8859-10.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/ucmaps/8859-11.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
