--- a/.gitattributes
+++ b/.gitattributes
@@ -14855,6 +14855,9 @@ tests/test/tinline6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinline7.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinline8.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinline9.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tinlrange1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tinlrange2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tinlrange3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint2str1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint2str2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint641.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
